syntax = "proto2";

package com.facebook.sdk.ip.api;

option java_package = "com.mobile.sdk.ipv6.proto";

message CommonMessage {
  required int32 bizId = 1;
  required int32 msgType = 2;
  required bytes content = 3;
}